--- a/final/css/_responsive.scss
+++ b/final/css/_responsive.scss
@@ -28,7 +28,7 @@ html {
     .one,
     .two,
     .three {
-        background-color: #fff;
+        background-color: set-text-color($cor1);
         height: 5px;
         width: 100%;
         margin: 6px auto;
@@ -51,7 +51,7 @@ html {
         width: 100vw;
         height: 100vh;
 
-        background-color: #7159c1;
+        background-color: $cor1;
         
         z-index: 10;
 
